<resources>
    <string name="app_name">Cisum</string>
    <string name="copyright">Copyright © 2017&#045;%d SWUST</string>
    <string name="enter_username">请输入用户名</string>
    <string name="enter_password">请输入密码</string>
    <string name="remember_password">是否记住密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="local_music">本地音乐</string>
    <string name="online_music">在线音乐</string>
    <string name="nav_exit">退出应用</string>
    <string name="nav_switch_user">切换用户</string>
    <string name="nav_about">关于Cisum</string>
    <string name="no_local_music">暂无本地音乐</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="delete_music">删除%s？</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="play_time_start">00:00</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_single">单曲循环</string>
    <string name="mode_loop">列表循环</string>
    <string name="todo">TODO</string>
    <string name="no_music">无音乐</string>
    <string name="welcom">Welcome, this is just A music App.</string>
    <string name="walks">今日步数：0</string>
    <string name="songs">歌曲</string>
    <string name="albums">歌手 - 专辑</string>
    <string name="app">Cisum</string>
</resources>
