<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <View
        android:id="@+id/v_playing"
        android:layout_width="3dp"
        android:layout_height="50dp"
        android:layout_marginEnd="3dp"
        android:background="@color/blue"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/songs"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/text_size_common" />

                <TextView
                    android:id="@+id/tv_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/albums"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/music_list_more_bg_selector"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_music_list_icon_more" />
        </LinearLayout>

        <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_gravity="bottom"
            android:background="?android:attr/listDivider" />
    </FrameLayout>
</LinearLayout>